--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
+    "reselect": "^4.1.7",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
