--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.2.5",
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
     "axios": "^1.2.1",
     "formik": "^2.2.9",
     "react": "^18.2.0",
@@ -17,6 +21,7 @@
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
     "reselect": "^4.1.7",
+    "typescript": "^4.9.4",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
