--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "antd": "^5.1.6",
     "axios": "^1.2.1",
     "formik": "^2.2.9",
     "react": "^18.2.0",
